# d2l-cli

./: .gitignore  AGENTS.md  D2L_API_REFERENCE.md  INSTALL_FOR_AGENTS.md  QUICKSTART.md  README.md  d2l.py  grab_token.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/d2l/: SKILL.md
.github/workflows/: ci.yml  publish.yml
assets/banner-src/: index.html
skills/d2l/: SKILL.md
skills/d2l/references/: auth.md  commands.md
skills/d2l/scripts/: doctor.sh  install.sh  onboard.sh
src/d2l/: __init__.py  auth.py  cli.py  client.py  config.py  errors.py  formatting.py  schools.py
src/d2l/commands/: assignments.py  auth_cmd.py  discussions.py  download.py  onboard.py  syllabus.py  update_cmd.py  updates.py
src/d2l/data/skill/: SKILL.md
src/d2l/data/skill/references/: auth.md  commands.md  safety.md
tests/: test_auth.py  test_autologin.py  test_onboard.py  test_setup.py  test_update.py
