[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "d2l-cli"
version = "0.1.0"
description = "Read-only CLI client for D2L Brightspace student APIs"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.optional-dependencies]
login = ["playwright>=1.40"]

[project.scripts]
d2l = "d2l.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
