[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "d2l-cli"
version = "0.2.0"
description = "Read-only CLI client for D2L Brightspace student APIs, built for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["d2l", "brightspace", "lms", "student", "cli", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.optional-dependencies]
login = ["playwright>=1.40"]

[project.urls]
Homepage = "https://github.com/Aaryan-Kapoor/d2l-cli"
Issues = "https://github.com/Aaryan-Kapoor/d2l-cli/issues"

[project.scripts]
d2l = "d2l.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
d2l = ["data/skill/**/*"]
